tests/rosetta/out/Swift/accumulator-factory.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T13:15:38Z
func accumulator(_ sum: inout any) -> (any) -> Void {
    var store: [any] = [sum]
    func add(_ nv: inout any) -> any {
        store[0] = store[0] + nv
        return store[0]
    }
    return add
}
func main() {
    let x = accumulator(&1)
    x(5)
    accumulator(&3)
    print(String(x(2.3)))
}
main()
